Start create endpoint and page templates
